@@ -23,18 +23,20 @@ module Baler
       end
 
       alias use_context? use_context
-
-      def elements(index = 0)
-        use_context? ?
-          @document.relative_elements_for(@path, index) :
-          @document.absolute_elements_for(@path)
-      end
       
-      def value(index = 0)
-        elements = elements(index)
+      def value(index = nil, index_absolute_elements = false)
+        elements = elements(index, index_absolute_elements)
         result = self.block.call(elements) unless elements.empty?
         (result.is_a?(Array) and result.length <= 1) ? result.first : result.try.to_array
       end
+      
+      protected
+        def elements(index = nil, index_absolute_elements = false)
+          absolute_index = index if index_absolute_elements
+          use_context? ?
+            @document.relative_elements_for(@path, index) :
+            @document.absolute_elements_for(@path, absolute_index)
+        end
     end
   end
 end
