@@ -8,7 +8,8 @@
 	<meta name="author" content="Kevin Hyland">
 </head>
 <body>
-  <h1 class='global'>National Basketball Association</h1>
+  <h1 class='global league'>National Basketball Association</h1>
+  <h1 class='global season'>2008-09</h1>
   
   <ol>
     <li>
