@@ -1,3 +1,6 @@
+*edge*  [04/13/09] - added functionality for extracting a value from the source, without
+                     actually mapping it to a instance attribute
+
 *0.3.0* [04/08/09] - implemented integration with ORM classes; Remote::Source#build_or_update
                      retrieves persistent instances based upon #set_lookup_attributes, or builds
                      a new instance when one is not found.
